feat: 2nd paragraph

--- a/index.html
+++ b/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Little Red Riding Hood</title>
-  <link rel="stylesheet" href="src/css/style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="src/css/style.css" />
+  </head>
+  <body>
     <div class="container">
-        <h1>Little Red Riding Hood</h1>
-    
-        <img
-          src="https://files.oaiusercontent.com/file-cs0igY8lCNsb2xzpRAr2RsGn?se=2024-11-15T12%3A28%3A18Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dc0682fea-b06d-4c19-9ae4-f88063f5ac92.webp&sig=jlippgBvGWEedBqbby1VhBj59BarJuARnt2ISQm3sn8%3D"
-          alt="Little Red Riding Hood Image">
-    
-        <p>Once upon a time, there was a little girl who lived in a village near the forest. Whenever she went out, the
-          little girl wore a red riding cloak, so everyone in the village called her Little Red Riding Hood.</p>
+      <h1>Little Red Riding Hood</h1>
 
+      <img
+        src="https://files.oaiusercontent.com/file-cs0igY8lCNsb2xzpRAr2RsGn?se=2024-11-15T12%3A28%3A18Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dc0682fea-b06d-4c19-9ae4-f88063f5ac92.webp&sig=jlippgBvGWEedBqbby1VhBj59BarJuARnt2ISQm3sn8%3D"
+        alt="Little Red Riding Hood Image"
+      />
+
+      <p>
+        Once upon a time, there was a little girl who lived in a village near
+        the forest. Whenever she went out, the little girl wore a red riding
+        cloak, so everyone in the village called her Little Red Riding Hood.
+      </p>
+
+      <p>
+        One morning, Little Red Riding Hood asked her mother if she could go to
+        visit her grandmother, as it had been a while since they'd seen each
+        other. "That's a good idea," her mother said. So they packed a nice
+        basket for Little Red Riding Hood to take to her grandmother.
+      </p>
     </div>
-</body>
+  </body>
 </html>
