feat: 3rd paragraph

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
         other. "That's a good idea," her mother said. So they packed a nice
         basket for Little Red Riding Hood to take to her grandmother.
       </p>
+
+      <p>When the basket was ready, the little girl put on her red cloak and kissed her mother goodbye. "Remember, go
+        straight to Grandma's house," her mother cautioned. "Don't dawdle along the way and please don't talk to
+        strangers! The woods are dangerous". "Don't worry, Mommy," said Little Red Riding Hood, and with that, she skipped
+        off.</p>
+
     </div>
   </body>
 </html>
