--- a/index.html
+++ b/index.html
@@ -28,11 +28,25 @@
         basket for Little Red Riding Hood to take to her grandmother.
       </p>
 
-      <p>When the basket was ready, the little girl put on her red cloak and kissed her mother goodbye. "Remember, go
-        straight to Grandma's house," her mother cautioned. "Don't dawdle along the way and please don't talk to
-        strangers! The woods are dangerous". "Don't worry, Mommy," said Little Red Riding Hood, and with that, she skipped
-        off.</p>
+      <p>
+        When the basket was ready, the little girl put on her red cloak and
+        kissed her mother goodbye. "Remember, go straight to Grandma's house,"
+        her mother cautioned. "Don't dawdle along the way and please don't talk
+        to strangers! The woods are dangerous". "Don't worry, Mommy," said
+        Little Red Riding Hood, and with that, she skipped off.
+      </p>
 
+      <p>
+        It wasn't long before she noticed a wolf watching her from the shadows
+        of the trees. "Good day, Little Red Riding Hood," said the wolf with a
+        sly smile. "Thank you, Mr. Wolf," Little Red Riding Hood replied, not
+        realizing how dangerous the wolf was. "Where are you going, little
+        girl?" asked the wolf, keeping his voice calm and friendly. "I'm going
+        to visit my grandmother, who lives just beyond the forest," Little Red
+        Riding Hood replied. "Oh, what a charming place she must live in," the
+        wolf said, then ran off into the forest.
+      </p>
+      
     </div>
   </body>
 </html>
