feat: 5th paragraph

--- a/index.html
+++ b/index.html
@@ -46,6 +46,13 @@
         Riding Hood replied. "Oh, what a charming place she must live in," the
         wolf said, then ran off into the forest.
       </p>
+
+      <p>
+        The wolf, of course, took a shortcut and arrived at Grandma's house
+        first. He knocked on the door and let himself in. Poor Grandma didn't
+        even have time to cry out before the wolf gobbled her up. When Little
+        Red Riding Hood arrived, she noticed that something was different.
+      </p>
       
     </div>
   </body>
