feat: added dialogues

--- a/index.html
+++ b/index.html
@@ -53,6 +53,21 @@
         even have time to cry out before the wolf gobbled her up. When Little
         Red Riding Hood arrived, she noticed that something was different.
       </p>
+
+      <p>"Grandmother, what big ears you have!" she said.</p>
+
+      <p>"All the better to hear you with, my dear," replied the wolf.</p>
+
+      <p>"Grandmother, what big eyes you have!"</p>
+
+      <p>"All the better to see you with, my dear," replied the wolf.</p>
+
+      <p>"But Grandmother, what big teeth you have!"</p>
+
+      <p>
+        "All the better to eat you with!" growled the wolf, leaping out of the
+        bed.
+      </p>
       
     </div>
   </body>
