feat: final paragraph and farewell

--- a/index.html
+++ b/index.html
@@ -1,74 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Little Red Riding Hood</title>
     <link rel="stylesheet" href="src/css/style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="container">
-      <h1>Little Red Riding Hood</h1>
+        <h1>Little Red Riding Hood</h1>
 
-      <img
-        src="https://files.oaiusercontent.com/file-cs0igY8lCNsb2xzpRAr2RsGn?se=2024-11-15T12%3A28%3A18Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dc0682fea-b06d-4c19-9ae4-f88063f5ac92.webp&sig=jlippgBvGWEedBqbby1VhBj59BarJuARnt2ISQm3sn8%3D"
-        alt="Little Red Riding Hood Image"
-      />
+        <img src="https://files.oaiusercontent.com/file-cs0igY8lCNsb2xzpRAr2RsGn?se=2024-11-15T12%3A28%3A18Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dc0682fea-b06d-4c19-9ae4-f88063f5ac92.webp&sig=jlippgBvGWEedBqbby1VhBj59BarJuARnt2ISQm3sn8%3D"
+            alt="Little Red Riding Hood Image" />
 
-      <p>
-        Once upon a time, there was a little girl who lived in a village near
-        the forest. Whenever she went out, the little girl wore a red riding
-        cloak, so everyone in the village called her Little Red Riding Hood.
-      </p>
+        <p>
+            Once upon a time, there was a little girl who lived in a village near
+            the forest. Whenever she went out, the little girl wore a red riding
+            cloak, so everyone in the village called her Little Red Riding Hood.
+        </p>
 
-      <p>
-        One morning, Little Red Riding Hood asked her mother if she could go to
-        visit her grandmother, as it had been a while since they'd seen each
-        other. "That's a good idea," her mother said. So they packed a nice
-        basket for Little Red Riding Hood to take to her grandmother.
-      </p>
+        <p>
+            One morning, Little Red Riding Hood asked her mother if she could go to
+            visit her grandmother, as it had been a while since they'd seen each
+            other. "That's a good idea," her mother said. So they packed a nice
+            basket for Little Red Riding Hood to take to her grandmother.
+        </p>
 
-      <p>
-        When the basket was ready, the little girl put on her red cloak and
-        kissed her mother goodbye. "Remember, go straight to Grandma's house,"
-        her mother cautioned. "Don't dawdle along the way and please don't talk
-        to strangers! The woods are dangerous". "Don't worry, Mommy," said
-        Little Red Riding Hood, and with that, she skipped off.
-      </p>
+        <p>
+            When the basket was ready, the little girl put on her red cloak and
+            kissed her mother goodbye. "Remember, go straight to Grandma's house,"
+            her mother cautioned. "Don't dawdle along the way and please don't talk
+            to strangers! The woods are dangerous". "Don't worry, Mommy," said
+            Little Red Riding Hood, and with that, she skipped off.
+        </p>
 
-      <p>
-        It wasn't long before she noticed a wolf watching her from the shadows
-        of the trees. "Good day, Little Red Riding Hood," said the wolf with a
-        sly smile. "Thank you, Mr. Wolf," Little Red Riding Hood replied, not
-        realizing how dangerous the wolf was. "Where are you going, little
-        girl?" asked the wolf, keeping his voice calm and friendly. "I'm going
-        to visit my grandmother, who lives just beyond the forest," Little Red
-        Riding Hood replied. "Oh, what a charming place she must live in," the
-        wolf said, then ran off into the forest.
-      </p>
+        <p>
+            It wasn't long before she noticed a wolf watching her from the shadows
+            of the trees. "Good day, Little Red Riding Hood," said the wolf with a
+            sly smile. "Thank you, Mr. Wolf," Little Red Riding Hood replied, not
+            realizing how dangerous the wolf was. "Where are you going, little
+            girl?" asked the wolf, keeping his voice calm and friendly. "I'm going
+            to visit my grandmother, who lives just beyond the forest," Little Red
+            Riding Hood replied. "Oh, what a charming place she must live in," the
+            wolf said, then ran off into the forest.
+        </p>
 
-      <p>
-        The wolf, of course, took a shortcut and arrived at Grandma's house
-        first. He knocked on the door and let himself in. Poor Grandma didn't
-        even have time to cry out before the wolf gobbled her up. When Little
-        Red Riding Hood arrived, she noticed that something was different.
-      </p>
+        <p>
+            The wolf, of course, took a shortcut and arrived at Grandma's house
+            first. He knocked on the door and let himself in. Poor Grandma didn't
+            even have time to cry out before the wolf gobbled her up. When Little
+            Red Riding Hood arrived, she noticed that something was different.
+        </p>
 
-      <p>"Grandmother, what big ears you have!" she said.</p>
+        <p>"Grandmother, what big ears you have!" she said.</p>
 
-      <p>"All the better to hear you with, my dear," replied the wolf.</p>
+        <p>"All the better to hear you with, my dear," replied the wolf.</p>
 
-      <p>"Grandmother, what big eyes you have!"</p>
+        <p>"Grandmother, what big eyes you have!"</p>
 
-      <p>"All the better to see you with, my dear," replied the wolf.</p>
+        <p>"All the better to see you with, my dear," replied the wolf.</p>
 
-      <p>"But Grandmother, what big teeth you have!"</p>
+        <p>"But Grandmother, what big teeth you have!"</p>
 
-      <p>
-        "All the better to eat you with!" growled the wolf, leaping out of the
-        bed.
-      </p>
-      
+        <p>
+            "All the better to eat you with!" growled the wolf, leaping out of the
+            bed.
+        </p>
+
+        <p>
+            Just at that moment, a woodcutter was passing by the house. He heard
+            Little Red Riding Hood scream, ran inside, and chased the wolf away.
+            Little Red Riding Hood hugged her grandmother, who miraculously was
+            unharmed.
+        </p>
+
+        <p>And they all lived happily ever after.</p>
+
     </div>
-  </body>
+</body>
+
 </html>
