--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Little Red Riding Hood</title>
-    <link rel="stylesheet" href="src/css/style.css" />
+    <link rel="stylesheet" href="./src/css/style.css" />
 </head>
 
 <body>
     <div class="container">
         <h1>Little Red Riding Hood</h1>
 
-        <img src="https://files.oaiusercontent.com/file-cs0igY8lCNsb2xzpRAr2RsGn?se=2024-11-15T12%3A28%3A18Z&sp=r&sv=2024-08-04&sr=b&rscc=max-age%3D604800%2C%20immutable%2C%20private&rscd=attachment%3B%20filename%3Dc0682fea-b06d-4c19-9ae4-f88063f5ac92.webp&sig=jlippgBvGWEedBqbby1VhBj59BarJuARnt2ISQm3sn8%3D"
+        <img src="./src/img/redHood.png"
             alt="Little Red Riding Hood Image" />
 
         <p>
